[package]
name = "notox"
version = "1.0.9"
authors = ["n4n5 <its.just.n4n5@gmail.com>"]
categories = ["command-line-utilities"]
edition = "2021"
description = "no toxic names anymore"
license = "MIT"
homepage = "https://github.com/Its-Just-Nans/notox"
repository = "https://github.com/Its-Just-Nans/notox"
keywords = ["clean", "filename", "file", "filesystem", "tool"]
documentation = "https://docs.rs/notox"

[[bin]]
name = "notox"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[package.metadata.docs.rs]
all-features = true
